--- a/calculator/src/App.css
+++ b/calculator/src/App.css
@@ -28,6 +28,37 @@ input {
   display: block;
   /* margin-bottom: 20px; */
 }
+.calculator{
+  width: 350px;
+  height: 300px;
+  background-color: aliceblue;
+}
+.line1,
+.line234 {
+  display: flex;
+  justify-content: stretch;
+  align-items: stretch;
+}
+
+.line1 button,
+.line234 button {
+  flex: 1;
+  width: 100%;
+  height: 100%;
+  padding: 10px;
+}
+.line1{
+  display: flex;
+}
+.line1 button{
+  flex: 1 1 0%;
+}
+.line234{
+  display: flex;
+}
+.line234 button{
+  flex: 1 1 0%;
+}
 
 
 @keyframes App-logo-spin {
