--- a/calculator/src/App.css
+++ b/calculator/src/App.css
@@ -1,71 +1,51 @@
+*{
+  box-sizing: border-box;
+  margin: 0;
+  
+}
 .App {
   text-align: center;
 }
-
-.App-logo {
-  height: 20vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 .App-header {
-  background-color: #282c34;
+  background-color: #273e5d;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   /* justify-content: center; */
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-input {
-  display: block;
-  /* margin-bottom: 20px; */
+  font-size: calc(10px + 3vmin);
+  font-weight: 400;
+  color: rgb(189, 184, 184);
 }
 .calculator{
-  width: 350px;
-  height: 300px;
-  background-color: aliceblue;
+  /* width: 300px;
+  height: auto; */
+  /* background-color: aliceblue; */
+  border-radius: 10px;
+  overflow: hidden;
+  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.3);
+  margin-top: 3rem;
 }
-.line1,
-.line234 {
+.output{
+  background-color: cadetblue;
+  text-align: right;
+  padding-right: 20px;
+}
+.prev-value{
+  font-size: 12px;
+}
+button{
+  border-color: aqua;
+  padding: 15px;
+  background-color: rgb(181, 213, 225);
+  font-size: medium;
+  color: rgb(57, 58, 59);
+}
+.row{
   display: flex;
-  justify-content: stretch;
-  align-items: stretch;
+
+}
+.row button{
+  flex: 1 1 0;
 }
 
-.line1 button,
-.line234 button {
-  flex: 1;
-  width: 100%;
-  height: 100%;
-  padding: 10px;
-}
-.line1{
-  display: flex;
-}
-.line1 button{
-  flex: 1 1 0%;
-}
-.line234{
-  display: flex;
-}
-.line234 button{
-  flex: 1 1 0%;
-}
-
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
