--- a/calculator/src/App.css
+++ b/calculator/src/App.css
@@ -7,39 +7,37 @@
   text-align: center;
 }
 .App-header {
-  background-color: #273e5d;
+  background-color: #FF6F61;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
-  /* justify-content: center; */
   font-size: calc(10px + 3vmin);
-  font-weight: 400;
-  color: rgb(189, 184, 184);
+  font-weight: 600;
+  color: #F5F5F5;
+  padding: 1rem;
 }
 .calculator{
-  /* width: 300px;
-  height: auto; */
-  /* background-color: aliceblue; */
+  width: 250px;
+  height: 327px;
   border-radius: 10px;
   overflow: hidden;
   box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.3);
   margin-top: 3rem;
 }
 .output{
-  background-color: cadetblue;
+  background-color: #FC8D62;
   text-align: right;
-  padding-right: 20px;
+  padding: 10px;
 }
-.prev-value{
-  font-size: 12px;
-}
+
 button{
-  border-color: aqua;
+  border-color: #f7e3e3;
+  border-style: dotted;
   padding: 15px;
-  background-color: rgb(181, 213, 225);
-  font-size: medium;
-  color: rgb(57, 58, 59);
+  background-color: #F5F5F5;
+  font-size: large;
+  color: #4A4E4D;
 }
 .row{
   display: flex;
@@ -47,5 +45,15 @@ button{
 }
 .row button{
   flex: 1 1 0;
+}
+
+button:hover{
+  background-color: #f8e1e1;
+  color: #FF6F61;
+  cursor: pointer;
+}
+button:active{
+  background-color: #f8b3ae;
+  color: #F5F5F5;
 }
 
